[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wa-business-collector"
version = "0.1.1"
description = "Read-only WhatsApp Business Web collector for macOS Chrome sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "WhatsApp Business Collector contributors" }
]
keywords = ["whatsapp", "whatsapp-business", "chrome", "collector", "macos", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications",
  "Topic :: Utilities",
]
dependencies = []

[project.scripts]
wa-business-collector = "wa_business_collector.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wa_business_collector = ["assets/chrome_devtools.mjs"]
